{
    "name": "Inputmaster",
    "maps": [
        {
            "name": "Music",
            "id": "1ad6b040-fb73-4980-aaef-51f0319d8bb9",
            "actions": [
                {
                    "name": "addbeat_Ljab",
                    "type": "Button",
                    "id": "6e7bf865-d302-448f-8057-17f66282c345",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "addbeat_Lhook",
                    "type": "Button",
                    "id": "ff22425b-ccad-4b7b-9a9d-0a2b91c9149d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "addbeat_Luppercut",
                    "type": "Button",
                    "id": "a826482e-9bd3-4ca7-b71e-a1d23d96eaff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "addbeat_Rjab",
                    "type": "Button",
                    "id": "08581832-2afd-4deb-a464-5b9839ff1689",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "addbeat_Rhook",
                    "type": "Button",
                    "id": "b7b180ed-a6bd-4057-aaa4-419bc2b7ca13",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "addbeat_Ruppercut",
                    "type": "Button",
                    "id": "7c9e00e9-3e11-4a25-af57-8e2dddda8b30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d2389ebc-c5a5-469b-b4b9-bc561ea26d44",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "addbeat_Ljab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a819e43-b7dc-406b-9bbc-96f06f28a569",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "addbeat_Lhook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55d33c42-8599-44fd-a977-85a0f770df70",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "addbeat_Luppercut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfeda959-d79f-4a0b-9d43-7849e441d75d",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "addbeat_Rjab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52aa37f7-a1c8-406e-9b36-6ceb670ef2ba",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "addbeat_Rhook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1981178-8e6e-4b05-9cca-27aaca42a7fc",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "addbeat_Ruppercut",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}